macros/tests/ui/expected_identifier.rs
use macros::static_array_from_file;

static_array_from_file!("TYPES", "file.txt");

fn main() {}